# vampa

./: .editorconfig  .gitignore  .rustfmt.toml  AGENTS.md  Cargo.toml  README.md  flake.nix  justfile  result
.github/workflows/: ci.yml
src/libvamc_backend/: Cargo.toml
src/libvamc_backend/src/: lib.rs
src/libvamc_driver/: Cargo.toml
src/libvamc_driver/src/: driver.rs  lib.rs
src/libvamc_errors/: Cargo.toml
src/libvamc_errors/src/: lib.rs
src/libvamc_lexer/: Cargo.toml
src/libvamc_lexer/src/: cursor.rs  definitions.rs  lib.rs  test.rs  util.rs
src/libvamc_llvm/: Cargo.toml  README.md
src/libvamc_llvm/src/: behavior.rs  binary_operation.rs  block.rs  expression.rs  function_call.rs  function_declaration.rs  lib.rs  literal.rs  llvm_backend.rs  parameters.rs  source_file.rs  statement.rs  typ.rs  variable_declaration.rs  variable_reference.rs
src/libvamc_llvm/src/definitions/: mod.rs
src/libvamc_llvm/src/tests/: mod.rs  util.rs
src/libvamc_llvm/src/tests/blocks/: blocks.rs
src/libvamc_llvm/src/tests/blocks/snapshots/: vamc_llvm__tests__blocks__blocks__basic_block.snap
src/libvamc_llvm/src/tests/functions/: function_calls.rs  function_declarations.rs
src/libvamc_llvm/src/tests/functions/snapshots/: vamc_llvm__tests__functions__function_calls__typed_function_declaration.snap  vamc_llvm__tests__functions__function_declarations__typed_function_declaration.snap  vamc_llvm__tests__functions__function_declarations__typed_ternary_function_declaration.snap
src/libvamc_llvm/src/tests/variables/: variable_declarations.rs
src/libvamc_llvm/src/tests/variables/snapshots/: vamc_llvm__tests__variables__variable_declarations__simple_variable_declaration.snap
src/libvamc_parser/: Cargo.toml
src/libvamc_parser/src/: binary_operation.rs  block.rs  definitions.rs  expression.rs  function_call.rs  function_declaration.rs  lib.rs  literal.rs  module.rs  parameters.rs  source_file.rs  statement.rs  tests.rs  typ.rs  variable_declaration.rs  (+1 more)
src/libvamc_span/: Cargo.toml
src/vamc/: Cargo.toml
src/vamc/src/: behavior.rs  driver.rs  host.rs  lib.rs  main.rs
(+16 files in other folders)
