[package]
name = "vamc_llvm"
version = "0.1.0"
authors = ["Fausto Núñez Alberro <fausto.nunez@mailbox.org>"]
edition = "2018"

[lib]
name = "vamc_llvm"
path = "src/lib.rs"

[dependencies]
vamc_errors = { path = "../libvamc_errors" }
vamc_parser = { path = "../libvamc_parser" }

inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "llvm10-0" }
