[package]
name = "vamc_llvm"
version = "0.1.0"
authors = ["Fausto Núñez Alberro <fausto.nunez@mailbox.org>"]
edition = "2021"

[lib]
name = "vamc_llvm"
path = "src/lib.rs"

[dependencies]
vamc_errors = { path = "../libvamc_errors" }
vamc_parser = { path = "../libvamc_parser" }

inkwell = { version = "0.1.0", features = ["llvm10-0"] }

[dev-dependencies]
insta = "0.16.1"
