[package]
name = "vamc_llvm"
version = "0.1.0"
authors = ["Fausto Núñez Alberro <fausto.nunez@mailbox.org>"]
edition = "2021"

[lib]
name = "vamc_llvm"
path = "src/lib.rs"

[dependencies]
vamc_driver = { path = "../libvamc_driver" }
vamc_errors = { path = "../libvamc_errors" }
vamc_parser = { path = "../libvamc_parser" }

inkwell = { version = "0.9.0", features = ["llvm22-1"] }

[dev-dependencies]
vamc_lexer = { path = "../libvamc_lexer" }
insta = "1.28.0"
